--- a/smartlist.client/apps/smart-list-host/project.json
+++ b/smartlist.client/apps/smart-list-host/project.json
@@ -8,12 +8,16 @@
   "targets": {
     "build": {
       "executor": "@nx/angular:webpack-browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/smart-list-host",
         "index": "apps/smart-list-host/src/index.html",
         "main": "apps/smart-list-host/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js"
+        ],
         "tsConfig": "apps/smart-list-host/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
@@ -22,7 +26,9 @@
             "input": "apps/smart-list-host/public"
           }
         ],
-        "styles": ["apps/smart-list-host/src/styles.scss"],
+        "styles": [
+          "apps/smart-list-host/src/styles.scss"
+        ],
         "scripts": [],
         "customWebpackConfig": {
           "path": "apps/smart-list-host/webpack.config.ts"
@@ -59,7 +65,8 @@
       "executor": "@nx/angular:module-federation-dev-server",
       "options": {
         "port": 4200,
-        "publicHost": "http://localhost:4200"
+        "publicHost": "http://localhost:4200",
+        "proxyConfig": "apps/smart-list-host/proxy.conf.js"
       },
       "configurations": {
         "production": {
@@ -82,7 +89,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/smart-list-host/jest.config.ts"
       }
