--- a/SmartList.Server/Properties/launchSettings.json
+++ b/SmartList.Server/Properties/launchSettings.json
@@ -1,5 +1,15 @@
 {
   "profiles": {
+    "http-only": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5172"
+    },
     "http": {
       "commandName": "Project",
       "launchBrowser": true,
@@ -10,6 +20,16 @@
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5172"
+    },
+    "https-only": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7203;http://localhost:5172"
     },
     "https": {
       "commandName": "Project",
