--- a/smartlist.client/tsconfig.base.json
+++ b/smartlist.client/tsconfig.base.json
@@ -15,6 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@feature-login": [
+        "apps/smart-list-host/libs/features/feature-login/src/index.ts"
+      ],
       "SmartListMain/Routes": [
         "apps/smart-list-main/src/app/remote-entry/entry.routes.ts"
       ]
