--- a/smartlist.client/package.json
+++ b/smartlist.client/package.json
@@ -42,7 +42,10 @@
     "@module-federation/enhanced": "0.6.6",
     "@nx/eslint": "20.0.6",
     "@nx/eslint-plugin": "20.0.6",
+    "tailwindcss-primeui": "^0.3.4",
     "@nx/jest": "20.0.6",
+    "primeicons": "^7.0.0",
+    "primeng": "^18.0.0-beta.3",
     "@nx/js": "20.0.6",
     "@nx/web": "20.0.6",
     "@nx/webpack": "20.0.6",
